--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "art-template": "^4.13.2",
     "koa": "^2.13.0",
+    "koa-art-template": "^1.1.1",
     "koa-body": "^4.2.0",
     "koa-parameter": "^3.0.1",
-    "koa-router": "^9.4.0"
+    "koa-router": "^9.4.0",
+    "koa-static": "^5.0.0"
   }
 }
