--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "koa-body": "^4.2.0",
     "koa-parameter": "^3.0.1",
     "koa-router": "^9.4.0",
-    "koa-static": "^5.0.0"
+    "koa-static": "^5.0.0",
+    "mongoose": "^5.10.7"
   }
 }
