--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   },
   "dependencies": {
     "art-template": "^4.13.2",
+    "bcrypt": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.0",
     "koa-art-template": "^1.1.1",
     "koa-body": "^4.2.0",
     "koa-parameter": "^3.0.1",
+    "koa-passport": "^4.1.3",
     "koa-router": "^9.4.0",
     "koa-static": "^5.0.0",
-    "mongoose": "^5.10.7"
+    "log4js": "^6.3.0",
+    "mongoose": "^5.10.7",
+    "passport-jwt": "^4.0.0"
   }
 }
